fixed footer on mobile

--- a/components/Blocks/Cover/CoverParallax.module.scss
+++ b/components/Blocks/Cover/CoverParallax.module.scss
@@ -60,7 +60,6 @@
         padding: 0;
         display: inline-block;
         height: auto;
-        padding-top: 56.25%;
         padding-top: 52.2777777778%;
         margin-bottom: 1vw;
         border-radius: 5px;
