--- a/components/UI/Elements/Text/TextUpperWide.module.scss
+++ b/components/UI/Elements/Text/TextUpperWide.module.scss
@@ -1,7 +1,7 @@
 .text {
     display: inline-flex;
     justify-content: center;
-    font-size: clamp(3rem, 16.09vw, 12.05rem);
+    font-size: clamp(2rem, 16.09vw, 12.05rem);
     line-height: 1;
     font-weight: bold;
     color: inherit;
